<resources>
    <string name="app_name">TrackThatBarbellMobile</string>
    <string name="title_activity_workout_main">WorkoutMain</string>
    <string name="title_activity_workout_running">WorkoutRunningActivity</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_workout_template_config">WorkoutTemplateConfigActivity</string>
    <string name="title_activity_workout_template_initialization">
        WorkoutTemplateInitializationActivity
    </string>
    <string name="weight">weight</string>
    <string name="reps">reps</string>
    <string name="title_activity_do_workout">DoWorkoutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authenticate">Authenticate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remote_url">Remote Url:</string>
    <string name="not_set">Not set.</string>
    <string name="token">Token:</string>
    <string name="config_info_text">Create user or login to save url and token.</string>
    <string name="config_button_create_login">Create User Or Login</string>
    <string name="config_checkbox_save_training_remote">Save Training Remote Always</string>
    <string name="config_checkbox_save_training_locally">Save Training Locally Always</string>
    <string name="config_button_save">Save</string>
    <string name="remote">Remote</string>
    <string name="local">Local</string>
</resources>
