<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config.ConfigActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewUrlDisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/remote_url" />
            <TextView
                android:id="@+id/textViewUrlShowHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:maxLines="4"
                android:text="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewTokenSavedDisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/token" />
            <TextView
                android:id="@+id/textViewTokenSavedShowhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/not_set" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/config_info_text" />


        <Button
            android:id="@+id/buttonCreateUserOrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:onClick="ChangeToCreateUserActivity"
            android:text="@string/config_button_create_login" />

        <CheckBox
            android:id="@+id/checkBoxSaveRemoteAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/config_checkbox_save_training_remote" />

        <CheckBox
            android:id="@+id/checkBoxSaveLocallyAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/config_checkbox_save_training_locally" />

        <Button
            android:id="@+id/buttonSaveConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/config_button_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>